[gd_scene format=3 uid="uid://blfxxb66ypa2d"]

[ext_resource type="Script" uid="uid://cjof8gvfeji7b" path="res://scripts/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dsorqsd0e6gp8" path="res://scenes/shaman.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bf01jl6xk7ctv" path="res://scenes/mask.tscn" id="3_1bvp3"]
[ext_resource type="Script" uid="uid://cr7j2lefxfntf" path="res://scripts/resources/level_resource.gd" id="4_7mycd"]
[ext_resource type="Resource" uid="uid://cdlagddcwbyup" path="res://resources/levels/level_4-2.tres" id="6_cegan"]
[ext_resource type="Script" uid="uid://phkh2o26tdnn" path="res://scripts/main_camera.gd" id="7_4c57u"]
[ext_resource type="Resource" path="res://resources/levels/level_5-1.tres" id="7_82xsv"]
[ext_resource type="Texture2D" uid="uid://da22mvr2858k0" path="res://sprites/fire-spritesheet.png" id="8_5vw27"]
[ext_resource type="Resource" uid="uid://bcskxfvsimno" path="res://resources/levels/level_5-2.tres" id="8_getpj"]
[ext_resource type="Texture2D" uid="uid://dcbwll7yw8ds7" path="res://sprites/particle.png" id="9_kek77"]
[ext_resource type="Resource" uid="uid://cha2xe012u5n3" path="res://resources/levels/level_6-3.tres" id="11_1u8w0"]
[ext_resource type="PackedScene" uid="uid://xmjk6prny0i5" path="res://scenes/masks/mask_clock.tscn" id="11_efxa6"]
[ext_resource type="Resource" path="res://resources/levels/level_6-4.tres" id="12_0odxb"]
[ext_resource type="PackedScene" uid="uid://bbmyiyfx1lg4m" path="res://scenes/masks/mask_swap.tscn" id="12_dg77c"]
[ext_resource type="Resource" path="res://resources/levels/level_7-3.tres" id="12_kq58d"]
[ext_resource type="Resource" path="res://resources/levels/level_6-5.tres" id="13_1u8w0"]
[ext_resource type="Resource" path="res://resources/levels/level_8-3.tres" id="13_seu75"]
[ext_resource type="Resource" path="res://resources/levels/level_7-1.tres" id="14_1u8w0"]
[ext_resource type="Resource" uid="uid://cq4s5k5fvg1mn" path="res://resources/levels/level_9-2.tres" id="14_htxhm"]
[ext_resource type="AudioStream" uid="uid://cr37g27g88t28" path="res://audio/sfx/level_complete.ogg" id="16_kq58d"]
[ext_resource type="AudioStream" uid="uid://b6vms15h6lod6" path="res://audio/ggj-2026.wav" id="17_htxhm"]
[ext_resource type="AudioStream" uid="uid://c0x8luhy4grtw" path="res://audio/sfx/fire_loop_crackle.wav" id="17_seu75"]
[ext_resource type="PackedScene" uid="uid://cq1csbvp2p21r" path="res://scenes/foliages.tscn" id="20_seu75"]
[ext_resource type="Script" uid="uid://bfsvapxkw13np" path="res://scripts/runes.gd" id="25_0odxb"]
[ext_resource type="Texture2D" uid="uid://dfjm7upnb7do" path="res://models/TextureHerb/BC_Herbs.png" id="25_lswn8"]
[ext_resource type="Texture2D" uid="uid://bjr0iu02lbklu" path="res://models/TextureHerb/ORM_Herbs.png" id="26_xuqvo"]
[ext_resource type="Texture2D" uid="uid://d1lcvs2s2njhj" path="res://models/TextureHerb/N_Herbs.png" id="27_qsp4k"]
[ext_resource type="PackedScene" uid="uid://b7cercnrqjym4" path="res://scenes/totems/totem_1.tscn" id="30_jq2sk"]
[ext_resource type="PackedScene" uid="uid://mm7au23wm3ei" path="res://scenes/totems/totem_2.tscn" id="31_4k2k6"]
[ext_resource type="PackedScene" uid="uid://cw5wjprlsrovg" path="res://scenes/totems/totem_3.tscn" id="32_0rl1p"]
[ext_resource type="FontFile" uid="uid://dwbstqo1ojmx5" path="res://NotoSansSymbols2-Regular.ttf" id="32_htxhm"]

[sub_resource type="Environment" id="Environment_dg77c"]
background_mode = 2
ambient_light_color = Color(0, 0.4609375, 1, 1)
ambient_light_sky_contribution = 0.05
ambient_light_energy = 0.23
glow_enabled = true
glow_bloom = 0.4
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_light_energy = 0.26
fog_density = 0.0422

[sub_resource type="Gradient" id="Gradient_5vw27"]
offsets = PackedFloat32Array(0, 0.20366132, 0.49199083, 0.73913044, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 0.31520224, 0.015122294, 1, 1, 0.234375, 0, 1, 0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_kek77"]
gradient = SubResource("Gradient_5vw27")

[sub_resource type="Curve" id="Curve_4c57u"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.24833703, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_efxa6"]
curve = SubResource("Curve_4c57u")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_272bh"]
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = -360.0
angle_max = 360.00003
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_max = 1.0
angular_velocity_min = -4.000016
angular_velocity_max = 3.9999838
gravity = Vector3(0, 0, 0)
linear_accel_min = 4.9999976
linear_accel_max = 9.999997
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_efxa6")
color_ramp = SubResource("GradientTexture1D_kek77")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5vw27"]
transparency = 2
alpha_scissor_threshold = 0.7
alpha_antialiasing_mode = 0
blend_mode = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("8_5vw27")
emission_enabled = true
emission = Color(0.2862904, 1, 0, 1)
emission_energy_multiplier = 2.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 6
particles_anim_v_frames = 5
particles_anim_loop = true

[sub_resource type="QuadMesh" id="QuadMesh_kek77"]
material = SubResource("StandardMaterial3D_5vw27")

[sub_resource type="Curve" id="Curve_efxa6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7494457, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_dg77c"]
curve = SubResource("Curve_efxa6")

[sub_resource type="Curve" id="Curve_0odxb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lswn8"]
curve = SubResource("Curve_0odxb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ycdy4"]
emission_shape = 1
emission_sphere_radius = 1.5
gravity = Vector3(0, 5, 0)
scale_min = 0.01
scale_max = 0.02
scale_curve = SubResource("CurveTexture_dg77c")
color = Color(1, 0.6451749, 0.14453125, 1)
turbulence_noise_strength = 0.1
turbulence_noise_speed_random = 1.0
turbulence_influence_over_life = SubResource("CurveTexture_lswn8")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w48qg"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("9_kek77")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_vivmo"]
material = SubResource("StandardMaterial3D_w48qg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jq2sk"]
transparency = 1
blend_mode = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a6jrf"]
albedo_texture = ExtResource("25_lswn8")
metallic = 1.0
metallic_specular = 0.1
metallic_texture = ExtResource("26_xuqvo")
metallic_texture_channel = 2
roughness_texture = ExtResource("26_xuqvo")
roughness_texture_channel = 1
normal_enabled = true
normal_texture = ExtResource("27_qsp4k")
ao_enabled = true
ao_texture = ExtResource("26_xuqvo")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="PlaneMesh" id="PlaneMesh_1bvp3"]
size = Vector2(100, 100)

[sub_resource type="LabelSettings" id="LabelSettings_jq2sk"]
font = ExtResource("32_htxhm")
font_size = 56
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Node3D" unique_id=906742551 node_paths=PackedStringArray("rune")]
script = ExtResource("1_1bvp3")
mask_scene = ExtResource("3_1bvp3")
shaman_scene = ExtResource("2_h2yge")
levels = Array[ExtResource("4_7mycd")]([ExtResource("6_cegan"), ExtResource("7_82xsv"), ExtResource("8_getpj"), ExtResource("11_1u8w0"), ExtResource("12_0odxb"), ExtResource("13_1u8w0"), ExtResource("14_1u8w0"), ExtResource("12_kq58d"), ExtResource("13_seu75"), ExtResource("14_htxhm")])
rune = NodePath("Rune")

[node name="Audios" type="Node3D" parent="." unique_id=1942328178]

[node name="LevelCompleteAudio" type="AudioStreamPlayer3D" parent="Audios" unique_id=511545248]
stream = ExtResource("16_kq58d")

[node name="FireLoop" type="AudioStreamPlayer3D" parent="Audios" unique_id=1441322423]
stream = ExtResource("17_seu75")
volume_db = -6.0
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audios" unique_id=1404965537]
stream = ExtResource("17_htxhm")
autoplay = true

[node name="Rune" type="Node" parent="." unique_id=1026484157]
script = ExtResource("25_0odxb")

[node name="CameraContainer" type="Node3D" parent="." unique_id=929330395]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7)

[node name="Camera3D" type="Camera3D" parent="CameraContainer" unique_id=799955140]
transform = Transform3D(0.99999994, 0, 0, 0, 0.8290025, 0.5592449, 0, -0.5592449, 0.8290025, 0, 6, 0)
script = ExtResource("7_4c57u")

[node name="CameraTarget" type="Node3D" parent="." unique_id=1967595355]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4681427, 0.28215337)

[node name="TotemCameraTarget" type="Node3D" parent="." unique_id=1394447365]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4681427, -3.5967345)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=722427667]
environment = SubResource("Environment_dg77c")

[node name="Foliages" parent="WorldEnvironment" unique_id=1366835970 instance=ExtResource("20_seu75")]

[node name="Campfire" type="Node3D" parent="WorldEnvironment" unique_id=197369463]

[node name="OmniLight3D" type="OmniLight3D" parent="WorldEnvironment/Campfire" unique_id=595497951]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3878512, 0)
light_color = Color(0.7381592, 1, 0.35546875, 1)
light_energy = 0.5
shadow_enabled = true
omni_range = 10.685

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment/Campfire" unique_id=1465895426]
transform = Transform3D(1, 0, 0, 0, 0.97935706, 0.2021378, 0, -0.2021378, 0.97935706, 0, 0.6388743, 0)
light_color = Color(0.39944857, 0.36470592, 1, 1)
light_energy = 0.351

[node name="FireParticles" type="GPUParticles3D" parent="WorldEnvironment/Campfire" unique_id=1394658753]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, -0.008229256, 0)
amount = 100
process_material = SubResource("ParticleProcessMaterial_272bh")
draw_pass_1 = SubResource("QuadMesh_kek77")

[node name="Sparks" type="GPUParticles3D" parent="WorldEnvironment/Campfire" unique_id=1309374242]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3389276, 0)
lifetime = 3.0
process_material = SubResource("ParticleProcessMaterial_ycdy4")
draw_pass_1 = SubResource("QuadMesh_vivmo")

[node name="CampfireCSG" type="CSGCylinder3D" parent="WorldEnvironment/Campfire" unique_id=78306363]
visible = false
radius = 4.0
height = 0.001
sides = 38

[node name="LevelsCSG" type="CSGBox3D" parent="WorldEnvironment/Campfire" unique_id=832121726]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.02276051, 2.1826773, -7.914551)
visible = false
size = Vector3(14.770508, 5.3653564, 2.0343018)
material = SubResource("StandardMaterial3D_jq2sk")

[node name="Ground" type="MeshInstance3D" parent="WorldEnvironment" unique_id=1911962699]
material_override = SubResource("StandardMaterial3D_a6jrf")
mesh = SubResource("PlaneMesh_1bvp3")

[node name="ShamansContainer" type="Node3D" parent="." unique_id=1287725843]

[node name="Shaman" parent="ShamansContainer" unique_id=1026160748 instance=ExtResource("2_h2yge")]
transform = Transform3D(-0.5518674, 0, -0.83393157, 0, 1, 0, 0.83393157, 0, -0.5518674, -3.0207114, 1e-45, -1.9990041)

[node name="Shaman2" parent="ShamansContainer" unique_id=2036027695 instance=ExtResource("2_h2yge")]
transform = Transform3D(-0.55285066, 0, 0.83328015, 0, 1, 0, -0.83328015, 0, -0.55285066, 3.007548, 1e-45, -1.9953972)

[node name="Shaman3" parent="ShamansContainer" unique_id=1505500024 instance=ExtResource("2_h2yge")]
transform = Transform3D(-0.9998241, 0, -0.01875091, 0, 1, 0, 0.01875091, 0, -0.9998241, -0.06945413, 1e-45, -3.7033975)

[node name="MasksContainer" type="Node3D" parent="." unique_id=654119103]

[node name="Mask" parent="MasksContainer" unique_id=1193392792 node_paths=PackedStringArray("assigned_shaman") instance=ExtResource("3_1bvp3")]
transform = Transform3D(-0.9456621, -0.15023813, -0.28790885, 0, 0.8864092, -0.46256995, 0.324755, -0.4374821, -0.83836895, -3.1108909, 1.0018739, -2.0586817)
assigned_shaman = NodePath("../../ShamansContainer/Shaman")

[node name="Mask2" parent="MasksContainer" unique_id=1533408053 node_paths=PackedStringArray("assigned_shaman") instance=ExtResource("3_1bvp3")]
transform = Transform3D(-0.946059, 0.14981519, 0.28686738, 0, 0.8862816, -0.4628656, -0.3236343, -0.43794495, -0.83858067, 3.097657, 1.0018739, -2.0551813)
assigned_shaman = NodePath("../../ShamansContainer/Shaman2")

[node name="ModelContainer" parent="MasksContainer/Mask2" index="1" unique_id=1609231757]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.02755849, -0.8932487)

[node name="MaskClock" parent="MasksContainer/Mask2/ModelContainer" index="0" unique_id=1713705050 instance=ExtResource("11_efxa6")]

[node name="MaskNone" parent="MasksContainer/Mask2/ModelContainer" index="1" unique_id=1713705050]
visible = false

[node name="AnimationPlayer" parent="MasksContainer/Mask2" index="8" unique_id=791805540]
speed_scale = 1.8695514

[node name="Mask3" parent="MasksContainer" unique_id=835432512 node_paths=PackedStringArray("assigned_shaman") instance=ExtResource("3_1bvp3")]
transform = Transform3D(-0.9998273, -0.0027739264, -0.0060004187, 0, 0.9075845, -0.41956183, 0.006610453, -0.4195548, -0.90756, -0.07148182, 1.0018739, -3.811516)
assigned_shaman = NodePath("../../ShamansContainer/Shaman3")

[node name="ModelContainer" parent="MasksContainer/Mask3" index="1" unique_id=1609231757]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.027558107, -0.8932487)

[node name="MaskSwap" parent="MasksContainer/Mask3/ModelContainer" index="0" unique_id=937219786 instance=ExtResource("12_dg77c")]

[node name="MaskNone" parent="MasksContainer/Mask3/ModelContainer" index="1" unique_id=1713705050]
visible = false

[node name="AnimationPlayer" parent="MasksContainer/Mask3" index="8" unique_id=791805540]
speed_scale = 1.9038717

[node name="TotemsContainer" type="Node3D" parent="." unique_id=1981188701]

[node name="SM_Totem01" parent="TotemsContainer" unique_id=1059491425 instance=ExtResource("30_jq2sk")]
transform = Transform3D(0.6250373, 0, 0.15922707, 0, 0.6449999, 0, -0.15922707, 0, 0.6250373, -5.5282106, 2.3841858e-07, -9.602752)

[node name="SM_Totem02" parent="TotemsContainer" unique_id=1935059622 instance=ExtResource("31_4k2k6")]
transform = Transform3D(0.6250373, 0, 0.15922707, 0, 0.6449999, 0, -0.15922707, 0, 0.6250373, -4.6172304, 2.3841858e-07, -10.021275)

[node name="SM_Totem03" parent="TotemsContainer" unique_id=696602004 instance=ExtResource("32_0rl1p")]
transform = Transform3D(0.6250373, 0, 0.15922707, 0, 0.6449999, 0, -0.15922707, 0, 0.6250373, -3.8614454, -1.0057261, -12.156716)

[node name="SM_Totem04" parent="TotemsContainer" unique_id=416931585 instance=ExtResource("30_jq2sk")]
transform = Transform3D(0.6231885, 0.048039272, 0.15922707, -0.049573563, 0.64309204, 0, -0.15875608, -0.012237913, 0.6250373, -1.9861815, 2.3841858e-07, -9.64695)

[node name="SM_Totem05" parent="TotemsContainer" unique_id=639583354 instance=ExtResource("31_4k2k6")]
transform = Transform3D(0.59462434, -0.19259724, 0.15922709, 0.19874845, 0.6136156, 0, -0.15147941, 0.04906378, 0.6250374, -0.17421436, 2.3841858e-07, -10.294996)

[node name="SM_Totem06" parent="TotemsContainer" unique_id=73177262 instance=ExtResource("32_0rl1p")]
transform = Transform3D(0.6250364, 0.0011018043, 0.15922709, -0.001136994, 0.64499897, 0, -0.15922683, -0.00028068255, 0.6250374, 0.47367644, -1.0057261, -9.756435)

[node name="SM_Totem07" parent="TotemsContainer" unique_id=1816871849 instance=ExtResource("30_jq2sk")]
transform = Transform3D(0.5964565, 0.045978606, -0.09028096, -0.04649924, 0.60321045, 0, 0.09001391, 0.006938836, 0.598226, 2.757059, 2.3841858e-07, -10.27732)

[node name="SM_Totem08" parent="TotemsContainer" unique_id=1582318273 instance=ExtResource("31_4k2k6")]
transform = Transform3D(0.56911755, -0.18433565, -0.09028096, 0.18642296, 0.57556194, 0, 0.085888065, -0.027818913, 0.598226, 4.6784363, 2.3841858e-07, -10.170083)

[node name="SM_Totem09" parent="TotemsContainer" unique_id=217703541 instance=ExtResource("32_0rl1p")]
transform = Transform3D(0.5982251, 0.0010545419, -0.09028096, -0.001066483, 0.60499907, 0, 0.09028081, 0.00015914561, 0.598226, 5.0660367, -1.0057261, -9.422035)

[node name="RuneLayer" type="CanvasLayer" parent="." unique_id=58893181]

[node name="Control" type="Control" parent="RuneLayer" unique_id=1094549831]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RuneLabel" type="Label" parent="RuneLayer/Control" unique_id=752629004]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -264.0
offset_right = 500.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_jq2sk")
horizontal_alignment = 1
vertical_alignment = 1

[editable path="MasksContainer/Mask2"]
[editable path="MasksContainer/Mask3"]
